finished summary of sutton chapter 9; new notes from deep NN udacity class

--- a/articles/article-summaries.ipynb
+++ b/articles/article-summaries.ipynb
@@ -19,6 +19,7 @@
     "\n",
     "## To Read:\n",
     "\n",
+    "* [Rainbow: Combining Improvements in Deep Reinforcement Learning](https://arxiv.org/pdf/1710.02298.pdf) - 2017, state of the art RL algorithm\n",
     "* [Safe and Efficient Off-Policy Reinforcement Learning](https://arxiv.org/abs/1606.02647) - to read after eligibility traces\n",
     "* [Playing Atari with Deep Reinforcement Learning](https://arxiv.org/abs/1312.5602) - some old article with DNN playing atari games - check if maybe it contains some medium difficulty to implement algorithm.\n",
     "* [Weighted importance sampling for off-policy learning with linear function approximation](https://hadovanhasselt.files.wordpress.com/2015/12/wis_for_off_policy.pdf) - [high priority] implement after sutton\n",
