--- a/books/sutton-reinforcement-learning-intro.ipynb
+++ b/books/sutton-reinforcement-learning-intro.ipynb
@@ -339,8 +339,44 @@
     "    * use $R_{t+1} + \\gamma \\hat{v}(S_{t+1}, \\theta_t)$ as in TD methods - this will be biased but can be used to learn during episodes,\n",
     "    * any of the \"in-between\" methods of the above (like in multistep TD).\n",
     "* new problems that arise with value approx is how to actually approximate the value function, this includes:\n",
-    "    * how to encode states (the best way has the property such that value of similar / close states is close) - here we could use polynomial or fourier basis,\n",
-    "    * how to combine state encoding with parameters $\\theta$ - the quickest and easiest approach is to use linear combination of parameters with state encodings other would be to use artificial neural nets.\n"
+    "    * how to encode states (the best way has the property such that value of similar / close states is close) - see below,\n",
+    "    * how to combine state encoding with parameters $\\theta$ (**feature construction**) - the quickest and easiest approach is to use linear combination of parameters with state encodings other would be to use artificial neural nets.\n",
+    "* possible state $s = (s_1, s_2, s_3,..., s_d)$ encodings:\n",
+    "    * polynomial basis - we use polynomial of a given degree, like $(s_1, s_2, s_1s_2, s_1^2, s_2^2)$,\n",
+    "    * fourier basis - seems to be working better then polinomial on some example in Sutton,\n",
+    "    * coarse coding - covering state space with some shapes, for example circles, that are overlapping (each point may be covered by more then one). Each shape is a feature, if a state is contained by the shape then the corresponding feature has vale 1, otherwise it's 0 (so we have **binary features**).\n",
+    "    ![coarse coding](figs/coarsecoding.png)\n",
+    "        * by controlling coarsness (how much they overlap) we decide how precise potential model will be.\n",
+    "    * tile coding - a version of coarse coding - space is divided into several partitionings, an element of each partitioning is called a **tile**. Ususally square grids are used with some displacement / offset. Choosing the way to offset is important. With fixed offset some potential artifacts are possible (see in Sutton).\n",
+    "    * Radial Basis Functions - sort of a generalization of coarse encoding where instead of shapes we use gaussians and have sort of degree of belonging to a feature:\n",
+    "    $$\\phi_i(s)=\\exp(-\\frac{\\| s - c_i\\|^2}{2\\sigma^2_i})$$\n",
+    "* Artificial Neural Nets are commonly used as non-linear function approximators. Some info on ANNs:\n",
+    "    * each neuron computes linear combination of it's inputs with weights and applies to it **activation function**, some commonly used ones are:\n",
+    "        * sigmoid: $f(x) = 1/(1 + e^{-x})$\n",
+    "        * rectified linear unit: $f(x)=\\max(0,x)$\n",
+    "    * ANN with one hidden layer with enough sigmoid units can approximate any continuous function on a compact region to any degree of accuracy [Cybenko 1989](https://en.wikipedia.org/wiki/Universal_approximation_theorem). It still makes sense to use NNs with several hidden layers (they work better in practice).\n",
+    "    * ANNs are typically trained by Stochastic Gradient Descent with backpropagation algorithm which consists of alternating forward (computing value) and backward (computing gradients and updating weights) passes through the network.\n",
+    "    * There are RL methods (other then backpropagation) for training ANNs, but they are slower, but maybe closer to how aour brains do it.\n",
+    "    * there are two kinds of problems for deep ANNs:\n",
+    "        * because of large number of weights overfitting becomes an issue. Some ways of handling it include:\n",
+    "            * cross-validation - stopping training once performance on validation set begins to drop,\n",
+    "            * regularization - adding a penalty for complexity to the loss function (usually a norm of weights)\n",
+    "            * dropout - randomly removing units from ANNs during training and using all of them for testing (units are multiplied by their probabilities so that we are computing expected value of outputs of all possible sub-networks) - see Srivastava, Hinton, Krizhevsky, Sutskever and Salakhutdinov (2014).\n",
+    "        * the deeper the network the more inefficient it is to train the deepest layers of ANN (gradients of deeper layers decay quickly), some way to approach this is via unsupervised training of the deeper layers of the network on input data (moving weights to some region in space from wheregradient based algorithms can make quicker progress) - see Hinton, Osindero and Teh (2006).\n",
+    "    * deep convolutional networks seem not to have a problem of slow training of deeper layers because they have way less weights in the deepest (conolutional) layers.\n",
+    "* **Least-squares TD**:\n",
+    "    * when we approximate value function with linear combination of weights and state coefficients (with some encoding like fourier, but not necessarily): $\\hat{v}(s,\\theta)=\\theta^{T}\\phi(s) = \\sum_i \\theta_i \\phi_i(s)$ then weights update formula becomes:\n",
+    "    $$\\theta_{t+1} = \\theta_t + \\alpha (R_{t+1} + \\gamma \\theta^T_t \\phi_{t+1} - \\theta_t^T\\phi_t)\\phi_t$$\n",
+    "    $$ = \\theta_t + \\alpha (R_{t+1}\\phi_t - \\phi_t(\\phi_t - \\gamma \\phi_{t+1})^T \\theta_t)$$\n",
+    "    where $\\phi_t$ is encoding vector of state $s_t$\n",
+    "    * in this scenario we can directly compute a solution called a **TD fixed point**:\n",
+    "    $$b = \\mathbb{E}[R_{t+1}\\phi_t]$$\n",
+    "    $$A = \\mathbb{E}[\\phi_t(\\phi_t - \\gamma \\phi_{t+1})^T]$$\n",
+    "    then \n",
+    "    $$\\mathbb{E}[\\theta_{t+1}|\\theta_t] = \\theta_t + \\alpha (b - A\\theta_t)$$\n",
+    "    and the solution must be:\n",
+    "    $$\\theta_{TD}=A^{-1}b$$\n",
+    "    * there is a way to compute the above solution incrementally on each new observation. Big benefit is we no longer need step-size parameter. It may sound like a good news but is actually a drawback if one wants to use the method for control (when policy changes)."
    ]
   }
  ],
