--- a/notes/neural-nets.ipynb
+++ b/notes/neural-nets.ipynb
@@ -41,7 +41,10 @@
     "    * **momentum**: simple version is using running average of gradient updates instead of the update itself\n",
     "    * learning rate decay - we want to do it, although there is no consensu on how to do it best yet.\n",
     "    * for SGD if your model doesn't perform well a good first thing to try is lowering learning rate (also it is a common thing for models with higher learning rate to initially learn faster, but to reach worse plateau)\n",
-    "\n",
+    "* **Regularization**\n",
+    "    * one way to prevent overfitting would be to observe accuracy on validation set while learning and stop learning when the performance starts to drop\n",
+    "    * another approach is to add an additional term to the loss function - usually it would be L1 or L2 norm of the parameters\n",
+    "    * some recent approach is called **dropout** - the rough idea is to randomly drop half of units (neurons) from the network for each training example, next, when testing, we use whole network but with weights multiplied by probabilities (so we get expected output from initial network).\n",
     "    "
    ]
   }
