added info about wildml

--- a/books/sutton-reinforcement-learning-intro.ipynb
+++ b/books/sutton-reinforcement-learning-intro.ipynb
@@ -13,7 +13,15 @@
    "source": [
     "My open questions:\n",
     "* find example of MDP where optimal eps-greedy policy has value faunction such that the greedy policy with respect to those values is not optimal (in the general sense).\n",
-    "    * the answer is in the exercise 6.6 - Cliff walking girdworld. The best eps-greedy policy (with fixed eps) will learn to avoid the cliff, since due to sometimes choosing a random arm it would fall from the cliff. The environment is deterministic, so the optimal policy is to go close to the cliff.\n"
+    "    * the answer is in the exercise 6.6 - Cliff walking girdworld. The best eps-greedy policy (with fixed eps) will learn to avoid the cliff, since due to sometimes choosing a random arm it would fall from the cliff. The environment is deterministic, so the optimal policy is to go close to the cliff.\n",
+    "\n",
+    "This seems like an amazing place to learn RL: https://github.com/dennybritz/reinforcement-learning it also contains good summaries. I'm switching to more coding-oriented approach (earlier i was trying hard to read everything thoroughly). It doesn't mean I won't put summaries here. I will, but they might be less detailed.\n",
+    "\n",
+    "Generally this blog seems awesome to learn AI/ML: http://www.wildml.com/ . You can find there among others:\n",
+    "- RNN tutorial: http://www.wildml.com/2015/09/recurrent-neural-networks-tutorial-part-1-introduction-to-rnns/\n",
+    "- implementing NN from scratch: http://www.wildml.com/2015/09/implementing-a-neural-network-from-scratch/\n",
+    "- intro to CNNs: http://www.wildml.com/2015/11/understanding-convolutional-neural-networks-for-nlp/\n",
+    "- CNNs for text classification: http://www.wildml.com/2015/12/implementing-a-cnn-for-text-classification-in-tensorflow/"
    ]
   },
   {
